fixed vertical spacing for medium for footer

--- a/css/medium.css
+++ b/css/medium.css
@@ -137,7 +137,7 @@ div#gerg{
 
 
 div#footerText{
-margin-top: -3em;
+margin-top: 0em;
 margin-left: 0em;
 font-size:11px;
 width: 900px;
